--- a/.env
+++ b/.env
@@ -5,3 +5,13 @@ DB_HOST=103.97.126.29
 DB_USER=ukeptbsx_api-website
 DB_PASSWORD=axKKtJ5K2rkTLFqXw83T
 DB_NAME=ukeptbsx_api-website
+
+DB_HOST2=103.97.126.29
+DB_USER2=ukeptbsx_law
+DB_PASSWORD2=h9WSnza9BXuUHwSYkQsN
+DB_NAME2=ukeptbsx_law
+
+DB_HOST3=localhost
+DB_USER3=root
+DB_PASSWORD3=
+DB_NAME3=law
