--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ DB_PASSWORD=axKKtJ5K2rkTLFqXw83T
 DB_NAME=ukeptbsx_api-website
 
 DB_HOST2=103.97.126.29
-DB_USER2=ukeptbsx_law
-DB_PASSWORD2=h9WSnza9BXuUHwSYkQsN
-DB_NAME2=ukeptbsx_law
+DB_USER2=root
+DB_PASSWORD2=wuDlMXRAxSffXgJZvTmEkoqsHmWdcxTS
+DB_NAME2=railway
 
 DB_HOST3=localhost
 DB_USER3=root
