--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_USER=ukeptbsx_api-website
 DB_PASSWORD=axKKtJ5K2rkTLFqXw83T
 DB_NAME=ukeptbsx_api-website
 
-DB_HOST2=103.97.126.29
+DB_HOST2=mysql.railway.internal
 DB_USER2=root
 DB_PASSWORD2=wuDlMXRAxSffXgJZvTmEkoqsHmWdcxTS
 DB_NAME2=railway
