--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^8.13.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^7.0.3",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
